parser.out
Grammar:

Rule 0     S' -> PROGRAM
Rule 1     PROGRAM -> DEVICES CMDS
Rule 2     DEVICES -> DEVICE
Rule 3     DEVICES -> DEVICE DEVICES
Rule 4     DEVICE -> dispositivo : { ID , ID }
Rule 5     DEVICE -> dispositivo : { ID }
Rule 6     CMDS -> CMD .
Rule 7     CMDS -> CMD . CMDS
Rule 8     CMD -> ACT
Rule 9     CMD -> OBSACT
Rule 10    CMD -> ATTRIB
Rule 11    ATTRIB -> set ID = ACTEXECUTE
Rule 12    ATTRIB -> set ID = VAR
Rule 13    OBSACT -> se OBS entao CMDS senao CMDS
Rule 14    OBSACT -> se OBS entao CMDS
Rule 15    OBS -> ID OPLOGIC VAR CONJUNCTION OBS
Rule 16    OBS -> ID OPLOGIC VAR
Rule 17    VAR -> BOOL
Rule 18    VAR -> NUM
Rule 19    ACT -> ACTALERT
Rule 20    ACT -> ACTEXECUTE
Rule 21    ACTEXECUTE -> ACTION ID
Rule 22    ACTALERT -> enviar alerta ( ID , ID ) ID
Rule 23    ACTALERT -> enviar alerta ( ID ) ID

Terminals, with rules where they appear:

(                    : 22 23
)                    : 22 23
,                    : 4 22
.                    : 6 7
:                    : 4 5
=                    : 11 12
ACTION               : 21
BOOL                 : 17
CONJUNCTION          : 15
ID                   : 4 4 5 11 12 15 16 21 22 22 22 23 23
NUM                  : 18
OPLOGIC              : 15 16
alerta               : 22 23
dispositivo          : 4 5
entao                : 13 14
enviar               : 22 23
error                : 
se                   : 13 14
senao                : 13
set                  : 11 12
{                    : 4 5
}                    : 4 5

Nonterminals, with rules where they appear:

ACT                  : 8
ACTALERT             : 19
ACTEXECUTE           : 11 20
ATTRIB               : 10
CMD                  : 6 7
CMDS                 : 1 7 13 13 14
DEVICE               : 2 3
DEVICES              : 1 3
OBS                  : 13 14 15
OBSACT               : 9
PROGRAM              : 0
VAR                  : 12 15 16


state 0

    (0) S' -> . PROGRAM
    (1) PROGRAM -> . DEVICES CMDS
    (2) DEVICES -> . DEVICE
    (3) DEVICES -> . DEVICE DEVICES
    (4) DEVICE -> . dispositivo : { ID , ID }
    (5) DEVICE -> . dispositivo : { ID }
    dispositivo     shift and go to state 4

    PROGRAM                        shift and go to state 1
    DEVICES                        shift and go to state 2
    DEVICE                         shift and go to state 3

state 1

    (0) S' -> PROGRAM .


state 2

    (1) PROGRAM -> DEVICES . CMDS
    (6) CMDS -> . CMD .
    (7) CMDS -> . CMD . CMDS
    (8) CMD -> . ACT
    (9) CMD -> . OBSACT
    (10) CMD -> . ATTRIB
    (19) ACT -> . ACTALERT
    (20) ACT -> . ACTEXECUTE
    (13) OBSACT -> . se OBS entao CMDS senao CMDS
    (14) OBSACT -> . se OBS entao CMDS
    (11) ATTRIB -> . set ID = ACTEXECUTE
    (12) ATTRIB -> . set ID = VAR
    (22) ACTALERT -> . enviar alerta ( ID , ID ) ID
    (23) ACTALERT -> . enviar alerta ( ID ) ID
    (21) ACTEXECUTE -> . ACTION ID
    se              shift and go to state 12
    set             shift and go to state 13
    enviar          shift and go to state 14
    ACTION          shift and go to state 15

    CMDS                           shift and go to state 5
    CMD                            shift and go to state 6
    ACT                            shift and go to state 7
    OBSACT                         shift and go to state 8
    ATTRIB                         shift and go to state 9
    ACTALERT                       shift and go to state 10
    ACTEXECUTE                     shift and go to state 11

state 3

    (2) DEVICES -> DEVICE .
    (3) DEVICES -> DEVICE . DEVICES
    (2) DEVICES -> . DEVICE
    (3) DEVICES -> . DEVICE DEVICES
    (4) DEVICE -> . dispositivo : { ID , ID }
    (5) DEVICE -> . dispositivo : { ID }
    se              reduce using rule 2 (DEVICES -> DEVICE .)
    set             reduce using rule 2 (DEVICES -> DEVICE .)
    enviar          reduce using rule 2 (DEVICES -> DEVICE .)
    ACTION          reduce using rule 2 (DEVICES -> DEVICE .)
    dispositivo     shift and go to state 4

    DEVICE                         shift and go to state 3
    DEVICES                        shift and go to state 16

state 4

    (4) DEVICE -> dispositivo . : { ID , ID }
    (5) DEVICE -> dispositivo . : { ID }
    :               shift and go to state 17


state 5

    (1) PROGRAM -> DEVICES CMDS .
    $end            reduce using rule 1 (PROGRAM -> DEVICES CMDS .)


state 6

    (6) CMDS -> CMD . .
    (7) CMDS -> CMD . . CMDS
    .               shift and go to state 18


state 7

    (8) CMD -> ACT .
    .               reduce using rule 8 (CMD -> ACT .)


state 8

    (9) CMD -> OBSACT .
    .               reduce using rule 9 (CMD -> OBSACT .)


state 9

    (10) CMD -> ATTRIB .
    .               reduce using rule 10 (CMD -> ATTRIB .)


state 10

    (19) ACT -> ACTALERT .
    .               reduce using rule 19 (ACT -> ACTALERT .)


state 11

    (20) ACT -> ACTEXECUTE .
    .               reduce using rule 20 (ACT -> ACTEXECUTE .)


state 12

    (13) OBSACT -> se . OBS entao CMDS senao CMDS
    (14) OBSACT -> se . OBS entao CMDS
    (15) OBS -> . ID OPLOGIC VAR CONJUNCTION OBS
    (16) OBS -> . ID OPLOGIC VAR
    ID              shift and go to state 20

    OBS                            shift and go to state 19

state 13

    (11) ATTRIB -> set . ID = ACTEXECUTE
    (12) ATTRIB -> set . ID = VAR
    ID              shift and go to state 21


state 14

    (22) ACTALERT -> enviar . alerta ( ID , ID ) ID
    (23) ACTALERT -> enviar . alerta ( ID ) ID
    alerta          shift and go to state 22


state 15

    (21) ACTEXECUTE -> ACTION . ID
    ID              shift and go to state 23


state 16

    (3) DEVICES -> DEVICE DEVICES .
    se              reduce using rule 3 (DEVICES -> DEVICE DEVICES .)
    set             reduce using rule 3 (DEVICES -> DEVICE DEVICES .)
    enviar          reduce using rule 3 (DEVICES -> DEVICE DEVICES .)
    ACTION          reduce using rule 3 (DEVICES -> DEVICE DEVICES .)


state 17

    (4) DEVICE -> dispositivo : . { ID , ID }
    (5) DEVICE -> dispositivo : . { ID }
    {               shift and go to state 24


state 18

    (6) CMDS -> CMD . .
    (7) CMDS -> CMD . . CMDS
    (6) CMDS -> . CMD .
    (7) CMDS -> . CMD . CMDS
    (8) CMD -> . ACT
    (9) CMD -> . OBSACT
    (10) CMD -> . ATTRIB
    (19) ACT -> . ACTALERT
    (20) ACT -> . ACTEXECUTE
    (13) OBSACT -> . se OBS entao CMDS senao CMDS
    (14) OBSACT -> . se OBS entao CMDS
    (11) ATTRIB -> . set ID = ACTEXECUTE
    (12) ATTRIB -> . set ID = VAR
    (22) ACTALERT -> . enviar alerta ( ID , ID ) ID
    (23) ACTALERT -> . enviar alerta ( ID ) ID
    (21) ACTEXECUTE -> . ACTION ID
    $end            reduce using rule 6 (CMDS -> CMD . .)
    senao           reduce using rule 6 (CMDS -> CMD . .)
    .               reduce using rule 6 (CMDS -> CMD . .)
    se              shift and go to state 12
    set             shift and go to state 13
    enviar          shift and go to state 14
    ACTION          shift and go to state 15

    CMD                            shift and go to state 6
    CMDS                           shift and go to state 25
    ACT                            shift and go to state 7
    OBSACT                         shift and go to state 8
    ATTRIB                         shift and go to state 9
    ACTALERT                       shift and go to state 10
    ACTEXECUTE                     shift and go to state 11

state 19

    (13) OBSACT -> se OBS . entao CMDS senao CMDS
    (14) OBSACT -> se OBS . entao CMDS
    entao           shift and go to state 26


state 20

    (15) OBS -> ID . OPLOGIC VAR CONJUNCTION OBS
    (16) OBS -> ID . OPLOGIC VAR
    OPLOGIC         shift and go to state 27


state 21

    (11) ATTRIB -> set ID . = ACTEXECUTE
    (12) ATTRIB -> set ID . = VAR
    =               shift and go to state 28


state 22

    (22) ACTALERT -> enviar alerta . ( ID , ID ) ID
    (23) ACTALERT -> enviar alerta . ( ID ) ID
    (               shift and go to state 29


state 23

    (21) ACTEXECUTE -> ACTION ID .
    .               reduce using rule 21 (ACTEXECUTE -> ACTION ID .)


state 24

    (4) DEVICE -> dispositivo : { . ID , ID }
    (5) DEVICE -> dispositivo : { . ID }
    ID              shift and go to state 30


state 25

    (7) CMDS -> CMD . CMDS .
    $end            reduce using rule 7 (CMDS -> CMD . CMDS .)
    senao           reduce using rule 7 (CMDS -> CMD . CMDS .)
    .               reduce using rule 7 (CMDS -> CMD . CMDS .)


state 26

    (13) OBSACT -> se OBS entao . CMDS senao CMDS
    (14) OBSACT -> se OBS entao . CMDS
    (6) CMDS -> . CMD .
    (7) CMDS -> . CMD . CMDS
    (8) CMD -> . ACT
    (9) CMD -> . OBSACT
    (10) CMD -> . ATTRIB
    (19) ACT -> . ACTALERT
    (20) ACT -> . ACTEXECUTE
    (13) OBSACT -> . se OBS entao CMDS senao CMDS
    (14) OBSACT -> . se OBS entao CMDS
    (11) ATTRIB -> . set ID = ACTEXECUTE
    (12) ATTRIB -> . set ID = VAR
    (22) ACTALERT -> . enviar alerta ( ID , ID ) ID
    (23) ACTALERT -> . enviar alerta ( ID ) ID
    (21) ACTEXECUTE -> . ACTION ID
    se              shift and go to state 12
    set             shift and go to state 13
    enviar          shift and go to state 14
    ACTION          shift and go to state 15

    CMDS                           shift and go to state 31
    CMD                            shift and go to state 6
    ACT                            shift and go to state 7
    OBSACT                         shift and go to state 8
    ATTRIB                         shift and go to state 9
    ACTALERT                       shift and go to state 10
    ACTEXECUTE                     shift and go to state 11

state 27

    (15) OBS -> ID OPLOGIC . VAR CONJUNCTION OBS
    (16) OBS -> ID OPLOGIC . VAR
    (17) VAR -> . BOOL
    (18) VAR -> . NUM
    BOOL            shift and go to state 33
    NUM             shift and go to state 34

    VAR                            shift and go to state 32

state 28

    (11) ATTRIB -> set ID = . ACTEXECUTE
    (12) ATTRIB -> set ID = . VAR
    (21) ACTEXECUTE -> . ACTION ID
    (17) VAR -> . BOOL
    (18) VAR -> . NUM
    ACTION          shift and go to state 15
    BOOL            shift and go to state 33
    NUM             shift and go to state 34

    ACTEXECUTE                     shift and go to state 35
    VAR                            shift and go to state 36

state 29

    (22) ACTALERT -> enviar alerta ( . ID , ID ) ID
    (23) ACTALERT -> enviar alerta ( . ID ) ID
    ID              shift and go to state 37


state 30

    (4) DEVICE -> dispositivo : { ID . , ID }
    (5) DEVICE -> dispositivo : { ID . }
    ,               shift and go to state 38
    }               shift and go to state 39


state 31

    (13) OBSACT -> se OBS entao CMDS . senao CMDS
    (14) OBSACT -> se OBS entao CMDS .
    senao           shift and go to state 40
    .               reduce using rule 14 (OBSACT -> se OBS entao CMDS .)


state 32

    (15) OBS -> ID OPLOGIC VAR . CONJUNCTION OBS
    (16) OBS -> ID OPLOGIC VAR .
    CONJUNCTION     shift and go to state 41
    entao           reduce using rule 16 (OBS -> ID OPLOGIC VAR .)


state 33

    (17) VAR -> BOOL .
    CONJUNCTION     reduce using rule 17 (VAR -> BOOL .)
    entao           reduce using rule 17 (VAR -> BOOL .)
    .               reduce using rule 17 (VAR -> BOOL .)


state 34

    (18) VAR -> NUM .
    CONJUNCTION     reduce using rule 18 (VAR -> NUM .)
    entao           reduce using rule 18 (VAR -> NUM .)
    .               reduce using rule 18 (VAR -> NUM .)


state 35

    (11) ATTRIB -> set ID = ACTEXECUTE .
    .               reduce using rule 11 (ATTRIB -> set ID = ACTEXECUTE .)


state 36

    (12) ATTRIB -> set ID = VAR .
    .               reduce using rule 12 (ATTRIB -> set ID = VAR .)


state 37

    (22) ACTALERT -> enviar alerta ( ID . , ID ) ID
    (23) ACTALERT -> enviar alerta ( ID . ) ID
    ,               shift and go to state 42
    )               shift and go to state 43


state 38

    (4) DEVICE -> dispositivo : { ID , . ID }
    ID              shift and go to state 44


state 39

    (5) DEVICE -> dispositivo : { ID } .
    dispositivo     reduce using rule 5 (DEVICE -> dispositivo : { ID } .)
    se              reduce using rule 5 (DEVICE -> dispositivo : { ID } .)
    set             reduce using rule 5 (DEVICE -> dispositivo : { ID } .)
    enviar          reduce using rule 5 (DEVICE -> dispositivo : { ID } .)
    ACTION          reduce using rule 5 (DEVICE -> dispositivo : { ID } .)


state 40

    (13) OBSACT -> se OBS entao CMDS senao . CMDS
    (6) CMDS -> . CMD .
    (7) CMDS -> . CMD . CMDS
    (8) CMD -> . ACT
    (9) CMD -> . OBSACT
    (10) CMD -> . ATTRIB
    (19) ACT -> . ACTALERT
    (20) ACT -> . ACTEXECUTE
    (13) OBSACT -> . se OBS entao CMDS senao CMDS
    (14) OBSACT -> . se OBS entao CMDS
    (11) ATTRIB -> . set ID = ACTEXECUTE
    (12) ATTRIB -> . set ID = VAR
    (22) ACTALERT -> . enviar alerta ( ID , ID ) ID
    (23) ACTALERT -> . enviar alerta ( ID ) ID
    (21) ACTEXECUTE -> . ACTION ID
    se              shift and go to state 12
    set             shift and go to state 13
    enviar          shift and go to state 14
    ACTION          shift and go to state 15

    CMDS                           shift and go to state 45
    CMD                            shift and go to state 6
    ACT                            shift and go to state 7
    OBSACT                         shift and go to state 8
    ATTRIB                         shift and go to state 9
    ACTALERT                       shift and go to state 10
    ACTEXECUTE                     shift and go to state 11

state 41

    (15) OBS -> ID OPLOGIC VAR CONJUNCTION . OBS
    (15) OBS -> . ID OPLOGIC VAR CONJUNCTION OBS
    (16) OBS -> . ID OPLOGIC VAR
    ID              shift and go to state 20

    OBS                            shift and go to state 46

state 42

    (22) ACTALERT -> enviar alerta ( ID , . ID ) ID
    ID              shift and go to state 47


state 43

    (23) ACTALERT -> enviar alerta ( ID ) . ID
    ID              shift and go to state 48


state 44

    (4) DEVICE -> dispositivo : { ID , ID . }
    }               shift and go to state 49


state 45

    (13) OBSACT -> se OBS entao CMDS senao CMDS .
    .               reduce using rule 13 (OBSACT -> se OBS entao CMDS senao CMDS .)


state 46

    (15) OBS -> ID OPLOGIC VAR CONJUNCTION OBS .
    entao           reduce using rule 15 (OBS -> ID OPLOGIC VAR CONJUNCTION OBS .)


state 47

    (22) ACTALERT -> enviar alerta ( ID , ID . ) ID
    )               shift and go to state 50


state 48

    (23) ACTALERT -> enviar alerta ( ID ) ID .
    .               reduce using rule 23 (ACTALERT -> enviar alerta ( ID ) ID .)


state 49

    (4) DEVICE -> dispositivo : { ID , ID } .
    dispositivo     reduce using rule 4 (DEVICE -> dispositivo : { ID , ID } .)
    se              reduce using rule 4 (DEVICE -> dispositivo : { ID , ID } .)
    set             reduce using rule 4 (DEVICE -> dispositivo : { ID , ID } .)
    enviar          reduce using rule 4 (DEVICE -> dispositivo : { ID , ID } .)
    ACTION          reduce using rule 4 (DEVICE -> dispositivo : { ID , ID } .)


state 50

    (22) ACTALERT -> enviar alerta ( ID , ID ) . ID
    ID              shift and go to state 51


state 51

    (22) ACTALERT -> enviar alerta ( ID , ID ) ID .
    .               reduce using rule 22 (ACTALERT -> enviar alerta ( ID , ID ) ID .)
